Version 3.2.x:

* Arcade: Fixed error with Texture getting multiple size args.
* Prefer X11 over Wayland because Qt still seems to work better with X11.
* Netplay server improvements [ztronzo].
* PyQt6 support [BluewizardNet].
* Build ARM64 versions also via GitHub.
* Package the Launcher slightly differently.
* Update build scripts to not depend on bash (better on Windows).
* Other Minor code cleanup and bug fixes, remove use of pkg_resources.

Version 3.1.x:

* Allow FS_GAMESYS_RUN_DIR to be relative to cwd.
* Fixes for PyQt5 errors observed on Fedora 35.
* Removed cacert.pem (should be handled by certifi package now).
* Launcher settings plugins page did not respect new FS-UAE/System directory.
* Remove empty "Directories" settings page.
* Fix disappearing configs when base_dir is specified with a trailing slash.
* Prefer $HOME/FS-UAE if it exists, otherwise use $DOCUMENTS/FS-UAE.
* Added lots of game controller configs.
* Support ~/ when  overriding base_dir in config file + create dir if needed.
* Fix layout issues caused by floats not being acceptedby pyqt5 any more.
* Fix loading WHDLoad .lha archives on Windows.
* Some changes to how/where plugins are found.
* Build system update.
* Official builds created with pyinstaller.
* Better support for High-DPI displays in Windows.

Version 3.0.5:

* Packaging change to satisfy Apple's changed notarization process (sigh).
* Workaround for old file database entries with incorrect \ escape.

Version 3.0.4:

* Filename escaping for FS-UAE and .uaem comments when using .lha files as HDs.
* Fixed bug in escaping of \ in archive.py.

Version 3.0.3:

* Fixed crash when starting the Launcher in a KDE environment.

Version 3.0.2:

* Another fix for global WHDLoad quit key.
* Fixed a misleading warning when cyberstorm ROM was not found (3.0.1).

Version 3.0.1:

* Scanner bug prevented Conquests of the Longbow WHDLoad to be recognized.
* The correct kickstart wasn't always loaded.
* Cloanto ROMs were not always decrypted.